<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="1:1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/one"
                android:onClick="oneOnClick"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button2"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/two"
                android:onClick="twoOnClick"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button3"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/three"
                android:onClick="threeOnClick"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button4"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/C"
                android:onClick="clearOnClick"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button5"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/four"
                android:onClick="fourOnClick"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button6"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/five"
                android:onClick="fiveOnClick"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button7"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/six"
                android:onClick="sixOnClick"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button8"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/minus"
                android:onClick="minusOnClick"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button9"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/seven"
                android:onClick="sevenOnClick"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button10"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/eight"
                android:onClick="eightOnClick"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button11"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/nine"
                android:onClick="nineOnClick"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button12"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/plus"
                android:onClick="plusOnClick"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button13"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/zero"
                android:onClick="zeroOnClick"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button14"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/equal"
                android:onClick="resultOnClick"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button15"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/division"
                android:onClick="divideOnClick"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button16"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#404040"
                android:text="@string/multiplication"
                android:onClick="multiplyOnClick"
                android:textColor="#FFFFFF" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="end"
        android:textSize="20sp"
        android:paddingHorizontal="5dp"
        android:text="@string/empty"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:gravity="end"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:paddingHorizontal="5dp"
        android:text="@string/empty"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>